fixed bg image to make it fit and hide scrollbar

--- a/index.css
+++ b/index.css
@@ -17,7 +17,12 @@ body {
   background-image: url("/Rectangle4301.png");
   background-repeat: no-repeat;
   background-size: cover;
-  background-attachment: fixed;
+  height: 100vh;
+  overflow-y: auto;
+}
+
+.container::-webkit-scrollbar {
+  display: none;
 }
 
 .header {
